--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,5 +1,6 @@
 $color-1: #ff6600;
-
+$color-dark-blue: rgba(26,35,126,1);
 body {
     color: $color-1;
+    background-color: $color-dark-blue;
 }
